--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,32 +1,64 @@
-html {
-  font-size: 62.5%; // 1rem is 10px
-}
+// html {
+//   font-size: 62.5%; // 1rem is 10px
+// }
 
-*,
-*::after,
-*::before {
-  margin: 0;
-  padding: 0;
-  box-sizing: inherit;
-  font-family: "montserrat";
-}
+// *,
+// *::after,
+// *::before {
+//   margin: 0;
+//   padding: 0;
+//   box-sizing: inherit;
+//   font-family: "montserrat";
+// }
 
-body {
-  overflow-x: hidden;
-  font-weight: normal;
+// body {
+//   overflow-x: hidden;
+//   font-weight: normal;
 
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-rendering: optimizeLegibility;
-  -webkit-tap-highlight-color: transparent;
-}
+//   -webkit-font-smoothing: antialiased;
+//   -moz-osx-font-smoothing: grayscale;
+//   text-rendering: optimizeLegibility;
+//   -webkit-tap-highlight-color: transparent;
+// }
 
-.app {
-  margin-top: 2rem;
-  display: grid;
-  justify-items: center;
-}
+// .app {
+//   margin-top: 2rem;
+//   display: grid;
+//   justify-items: center;
+// }
 
 .post-topic {
   margin: 0 4px;
 }
+
+body {
+  font-family: "Lato", sans-serif;
+}
+
+.app-wrapper {
+  display: grid;
+  justify-content: center;
+}
+
+.logo-main,
+.recent-posts {
+  display: grid;
+  justify-items: center;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+$color-gray-one: #666666;
+$color-gray-two: #b3b3b3;
+$color-gray-three: #d8d8d8;
+$color-blue-one: #0079ff;
+
+@import "./mixins.scss";
+@import "./searchBar.scss";
+@import "./recentPosts.scss";
+@import "./home.scss";
+@import "./results.scss";
