--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -57,6 +57,12 @@ $color-gray-two: #b3b3b3;
 $color-gray-three: #d8d8d8;
 $color-blue-one: #0079ff;
 
+.no-content {
+  color: $color-gray-one;
+  font-size: 14px;
+  line-height: 17px;
+}
+
 @import "./mixins.scss";
 @import "./searchBar.scss";
 @import "./recentPosts.scss";
