--- a/src/style/results.scss
+++ b/src/style/results.scss
@@ -42,6 +42,8 @@
 .post-link {
   min-height: 70px;
   display: flex;
+  flex-basis: 205px;
+  margin-right: 37px;
 
   .post-link__link a {
     color: $color-gray-one;
