--- a/src/style/recentPosts.scss
+++ b/src/style/recentPosts.scss
@@ -12,9 +12,11 @@
     }
     .recent-posts__posts {
       display: grid;
-      justify-content: space-evenly;
-      grid-template-columns: 1fr 1fr 1fr;
       gap: 42px;
+
+      @media screen and (min-width: 700px) {
+        grid-template-columns: 1fr 1fr 1fr;
+      }
     }
   }
 }
