--- a/src/style/searchBar.scss
+++ b/src/style/searchBar.scss
@@ -40,6 +40,11 @@
     justify-items: center;
     height: 118px;
     font-size: 40px;
+
+    @media screen and (max-width: 700px) {
+      font-size: 23px;
+      height: 59px;
+    }
   }
 }
 
